# ZBR

./: .gitignore  CMakeLists.txt  Makefile  ZBRy  ZBRy.pro  kinematicpoints.cpp  kinematicpoints.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  simulationcontroller.cpp  simulationcontroller.h  trajectorypoints.cpp  trajectorypoints.h  widgetanimation.cpp  widgetanimation.h  widgetanimation.ui  widgetsettings.cpp  widgetsettings.h  widgetsettings.ui
.github/workflows/: build.yml  check.yml
doc/: .~lock.usrguide.odt#  usrguide.odt
tests/: CMakeLists.txt  tst_kinematicpoints.cpp  tst_simulationcontroller.cpp  tst_trajectorypoints.cpp  tst_widgetanimation.cpp
